--- a/about.html
+++ b/about.html
@@ -64,15 +64,7 @@
             <li class="nav-item active">
               <a class="nav-link" href="about.html" title="About">About</a>
             </li>
-            <li class="nav-item">
-              <a class="nav-link" href="works.html" title="Works">Works</a>
-            </li>
-
-            <li class="nav-item">
-              <a class="nav-link" href="contactus.html" title="Contact Us"
-                >Contact us</a
-              >
-            </li>
+            
           </ul>
         </div>
       </nav>
@@ -90,19 +82,21 @@
     <section class="bg-white py-5">
       <div class="container my-5">
         <div class="row py-5">
-          <div class="col-md-3 text-left" data-aos="fade-up" data-aos-duration="1500">
+          <div
+            class="col-md-3 text-left"
+            data-aos="fade-up"
+            data-aos-duration="1500"
+          >
             <h2>Experience</h2>
-            <h5 class="font-weight-normal pink-text">5+ years Of experience</h5>
+            <h5 class="font-weight-normal pink-text">8+ years Of experience</h5>
           </div>
           <div class="col-md-9">
             <div class="row" data-aos="fade-up" data-aos-duration="1500">
               <div class="col-md-6">
-                <h5>Software Engineer</h5>
-                <h6 class="font-weight-normal">
-                  Opentrends Technologies Pvt Ltd
-                </h6>
+                <h5>Senior Software Engineer</h5>
+                <h6 class="font-weight-normal">SEIDOR Opentrends India</h6>
                 <p>
-                  Indeevaram Infopark Thrissur<br />
+                  Indeevaram Infopark, Thrissur, Kerala<br />
                   <strong class="pink-text">January 2021 - Present</strong>
                 </p>
               </div>
@@ -112,7 +106,7 @@
                   TimesWorld Mediaand Technology Solutions Pvt Ltd
                 </h6>
                 <p>
-                  Govt.Cyberpark Calicut, Kerala<br />
+                  Govt.Cyberpark Kozhikode, Kerala<br />
                   April 2019 - December 2020
                 </p>
               </div>
@@ -125,31 +119,31 @@
                   Netstager Technologies Pvt Ltd
                 </h6>
                 <p>
-                  Calicut, Kerala <br />
+                  UL Cyberpark, Kozhikode, Kerala <br />
                   January 2017 - March 2019
                 </p>
               </div>
-              <div class="col-md-6">
+              <!-- <div class="col-md-6">
                 <h5>Web Developer</h5>
                 <h6 class="font-weight-normal">QuinceIt Solutions</h6>
                 <p>
-                  Calicut, Kerala<br />
+                  Kozhikode, Kerala<br />
                   January 2016 – December 2016
                 </p>
-              </div>
+              </div> -->
             </div>
-            <hr />
+            <!-- <hr />
 
             <div class="row">
               <div class="col-md-6">
                 <h5>Web Designer</h5>
                 <h6 class="font-weight-normal">xl technologies</h6>
                 <p>
-                  Calicut, Kerala<br />
+                  Kozhikode, Kerala<br />
                   June 2015 – December 2015
                 </p>
               </div>
-            </div>
+            </div> -->
           </div>
         </div>
         <hr />
@@ -171,7 +165,7 @@
                 <h5>H.S.E</h5>
                 <p>
                   Govt.Higher Secondary School<br />
-                  Koduvally 2011 (73% Marks)
+                  Koduvally, Kozhikode, Kerala 2011 (73% Marks)
                 </p>
               </div>
             </div>
@@ -181,14 +175,14 @@
                 <h5>SSLC</h5>
                 <p>
                   Sacred Heart Higher Secondary School<br />
-                  Thiruvambady 2009 (75% Marks)
+                  Thiruvambady, Kozhikode, Kerala 2009 (75% Marks)
                 </p>
               </div>
               <div class="col-md-6">
                 <h5>Web Designing</h5>
                 <p>
                   O2 Web Academy<br />
-                  Kallai Road, Calicut,Kerala
+                  Kozhikode, Kerala
                 </p>
               </div>
             </div>
@@ -197,19 +191,54 @@
         <hr />
         <div class="row py-5">
           <div class="col-md-3 text-left">
-            <h2>Skill Sets</h2>
+            <h2>Skills</h2>
           </div>
           <div class="col-md-8">
-            <ul class="custom-list">
-              <li>HTML | HTML5</li>
-              <li>CSS | CSS3</li>
-              <li>SASS/SCSS</li>
-              <li>Bootstrap</li>
-              <li>BEM</li>
-              <li>Gitlab</li>
-              <li>JavaScript</li>
-              <li>Gulp</li>
-            </ul>
+            <div class="row">
+              <div class="col-md-3">
+                <div class="skil-title">Languages</div>
+                <ul class="custom-list">
+                  <li>JavaScript (ES6)</li>
+                  <li>TypeScript</li>
+                  <li>HTML</li>
+                  <li>CSS/Sass</li>
+                </ul>
+              </div>
+              <div class="col-md-3">
+                <div class="skil-title">Frameworks</div>
+                <ul class="custom-list">
+                  <li>React.js</li>
+                  <li>React native</li>
+                  <li>Angular</li>
+                  <li>Next.js</li>
+                </ul>
+              </div>
+              <div class="col-md-3">
+                <div class="skil-title">UI/UX & Design Systems</div>
+                <ul class="custom-list">
+                   <li>Responsive Design</li>
+  <li>PrimeNG</li>
+  <li>Mantine</li>
+  <li>Shadcn</li>
+  <li>Tailwind CSS</li>
+  <li>Bootstrap</li>
+  <li>Figma</li>
+  <li>Adobe XD</li>
+  <li>Photoshop</li>
+                </ul>
+              </div>
+              <div class="col-md-3">
+                <div class="skil-title">Tools & Platforms</div>
+                <ul class="custom-list">
+                   <li>Git</li>
+  <li>GitLab</li>
+  <li>npm, yarn, pnpm</li>
+  <li>Gulp, Vite</li>
+  <li>Postman, Swagger (OpenAPI)</li>
+  <li>Altair (GraphQL Client)</li>
+                </ul>
+              </div>
+            </div>
           </div>
         </div>
       </div>
