--- a/index.html
+++ b/index.html
@@ -52,9 +52,9 @@
     <div class="row">
       <div class="col-md-12 banner-height d-flex flex-column justify-content-center">
         <div class="banner-caption">
-          <h1>Hey, I'm <span class="yellow-bg">Sreedarsh.</span></h1>
-          <h2>I’m a UI UX Developer</h2>
-          <p>Write to me on <a href="mailto:sreedarshcp@gmail.com">sreedarshcp@gmail.com</a></p>
+          <h1>Hello, I'm <span class="yellow-bg">Sreedarsh.</span></h1>
+          <h2>Senior Frontend Engineer</h2>
+          <p>Get in touch<a href="mailto:sreedarshcp@gmail.com">sreedarshcp@gmail.com</a></p>
           <!-- <p>Hey, I am a highly skilled and enthusiastic UI/UX Designer with 5 years of experience. I mainly focus on creating mind-blowing website designs and make sure people enjoy these to the fullest in the first looks and connect with their hearts. Write to me on <a href="mailto:sreedarshcp@gmail.com">sreedarshcp@gmail.com</a> -->
 
 
@@ -62,15 +62,15 @@
         </div>
         <div class="banner-footer">
           <div class="cv-button">
-            <a target="blank" class="custom-btn" href="sreedarsh-cv.pdf"> Download CV <i class="las la-download"></i></a>
+            <a target="blank" class="custom-btn" href="Sreedarsh_CP_SeniorSoftwareEngineer_Resume_2025.pdf"> Download CV <i class="las la-download"></i></a>
           </div>
           <div class="social-media-main">
-            <span>Find me on</span>
+            <!-- <span>Find me on</span> -->
           <ul class="social-media">
-            <li><a target="_blank" href="https://www.behance.net/sreedarshcp"><i class="lab la-behance"></i></a></li>
-             <li><a target="_blank" href="https://dribbble.com/sreedarsh_in"><i class="lab la-dribbble"></i></a></li>
+            <!-- <li><a target="_blank" href="https://www.behance.net/sreedarshcp"><i class="lab la-behance"></i></a></li> -->
+             <!-- <li><a target="_blank" href="https://dribbble.com/sreedarsh_in"><i class="lab la-dribbble"></i></a></li> -->
               <li><a target="_blank" href="https://www.linkedin.com/in/sreedarsh-cp-b18196113/"><i class="lab la-linkedin-in"></i></a></li>
-               <li><a target="_blank" href="https://www.instagram.com/sreedarsh_cp/"><i class="lab la-instagram"></i></a></li>
+               <!-- <li><a target="_blank" href="https://www.instagram.com/sreedarsh_cp/"><i class="lab la-instagram"></i></a></li> -->
           </ul>
         </div>
         </div>
@@ -83,29 +83,30 @@
    <div class="container">
      <div class="row">
        <div class="col-md-12">
-         <h2 class="h1" data-aos="fade-up" data-aos-duration="1500">
-          I mainly focus on creating mind-blowing<br> website designs and make sure people enjoy <br>these to the fullest in the first looks and<br> <u>connect with their hearts.</u></h2>
+         <h2 class="h1 text-center font-weight-light" data-aos="fade-up" data-aos-duration="1500">
+          <strong>Senior Frontend Engineer with 8 years of experience</strong> building modern, responsive web applications using React, Angular, and related technologies. Committed to writing clean, efficient code with a strong focus on performance, usability, and scalable frontend solutions.</h2>
        </div>
      </div>
 
 
      <div class="row py-5 capabilities">
-      <div class="col-md-4" data-aos="fade-up" data-aos-duration="1500">
+      <div class="col-md-3" data-aos="fade-up" data-aos-duration="1500">
         <div class="card p-5">
-          <img src="images/ux-design.svg" class="icon">
-          <h5>UI/UX Mobile/Web</h5>
+          <!-- <img src="images/ux-design.svg" class="icon"> -->
+          <h5>React</h5>
         </div>
      </div>
-     <div class="col-md-4" data-aos="fade-up" data-aos-duration="1800">
-      <div class="card p-5">
-        <img src="images/coding.svg" class="icon">
-        <h5>Frontend Development</h5>
-      </div>
-   </div>
-   <div class="col-md-4" data-aos="fade-up" data-aos-duration="2000">
+
+   <div class="col-md-3" data-aos="fade-up" data-aos-duration="2000">
     <div class="card p-5">
-      <img src="images/responsive.svg" class="icon">
-      <h5>Responsive HTML</h5>
+      <!-- <img src="images/responsive.svg" class="icon"> -->
+      <h5>Next JS</h5>
+    </div>
+ </div>
+ <div class="col-md-3" data-aos="fade-up" data-aos-duration="2000">
+    <div class="card p-5">
+      <!-- <img src="images/responsive.svg" class="icon"> -->
+      <h5>Angular</h5>
     </div>
  </div>
      
