--- a/about.html
+++ b/about.html
@@ -165,7 +165,7 @@
                 <h5>H.S.E</h5>
                 <p>
                   Govt.Higher Secondary School<br />
-                  Koduvally, Kozhikode, Kerala 2011 (73% Marks)
+                  Kozhikode, Kerala 2011 (73% Marks)
                 </p>
               </div>
             </div>
@@ -175,7 +175,7 @@
                 <h5>SSLC</h5>
                 <p>
                   Sacred Heart Higher Secondary School<br />
-                  Thiruvambady, Kozhikode, Kerala 2009 (75% Marks)
+                  Kozhikode, Kerala 2009 (75% Marks)
                 </p>
               </div>
               <div class="col-md-6">
@@ -211,6 +211,7 @@
                   <li>React native</li>
                   <li>Angular</li>
                   <li>Next.js</li>
+                  <li>Nest.js</li>
                 </ul>
               </div>
               <div class="col-md-3">
@@ -234,8 +235,25 @@
   <li>GitLab</li>
   <li>npm, yarn, pnpm</li>
   <li>Gulp, Vite</li>
-  <li>Postman, Swagger (OpenAPI)</li>
+  <li>Postman, Swagger</li>
   <li>Altair (GraphQL Client)</li>
+                </ul>
+              </div>
+            </div>
+             <hr />
+            <div class="row">
+                <div class="col-md-3">
+                <div class="skil-title">State Management</div>
+                <ul class="custom-list">
+                   <li>Redux</li>
+                   <li>Context API
+</li>
+                </ul>
+              </div>
+              <div class="col-md-3">
+                <div class="skil-title">Version Control & CI/CD</div>
+                <ul class="custom-list">
+                   <li>GitLab CI/CD </li>
                 </ul>
               </div>
             </div>
