--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
     </div>
  </div>
   <div class="col-md-3" data-aos="fade-up" data-aos-duration="2000">
-   <a class="text-decoration-none" href="/about.html"> <div class="card p-5 h1">
+   <a class="text-decoration-none" href="about.html"> <div class="card p-5 h1">
      ...
     </div></a>
  </div>
