--- a/about.html
+++ b/about.html
@@ -103,7 +103,7 @@
               <div class="col-md-6">
                 <h5>UI/UX Developer</h5>
                 <h6 class="font-weight-normal">
-                  TimesWorld Mediaand Technology Solutions Pvt Ltd
+                  TimesWorld Media and Technology Solutions Pvt Ltd
                 </h6>
                 <p>
                   Govt.Cyberpark Kozhikode, Kerala<br />
@@ -158,14 +158,14 @@
                 <h5>Graduate</h5>
                 <p>
                   B.com with co-operation,<br />
-                  Calicut University 2014 (70% Marks)
+                  Calicut University 2014  <!--(70% Marks)-->
                 </p>
               </div>
               <div class="col-md-6">
                 <h5>H.S.E</h5>
                 <p>
                   Govt.Higher Secondary School<br />
-                  Kozhikode, Kerala 2011 (73% Marks)
+                  Kozhikode, Kerala 2011  <!--(73% Marks)-->
                 </p>
               </div>
             </div>
@@ -175,7 +175,7 @@
                 <h5>SSLC</h5>
                 <p>
                   Sacred Heart Higher Secondary School<br />
-                  Kozhikode, Kerala 2009 (75% Marks)
+                  Kozhikode, Kerala 2009  <!--(75% Marks)-->
                 </p>
               </div>
               <div class="col-md-6">
