--- a/about.html
+++ b/about.html
@@ -157,7 +157,7 @@
               <div class="col-md-6">
                 <h5>Graduate</h5>
                 <p>
-                  B.com with co-operation,<br />
+                  Bachelor of Commerce with co-operation<br />
                   Calicut University 2014  <!--(70% Marks)-->
                 </p>
               </div>
